--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "future-test"
+name = "ss-rs"
 version = "0.1.0"
 authors = ["石博文 <sbw@sbw.so>"]
 edition = "2018"
@@ -9,4 +9,5 @@ futures = "*"
 tokio = "*"
 bytes = "*"
 failure = "*"
-mio = "*"
+log = "*"
+env_logger = "*"
