add config module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,11 @@ bytes = "*"
 failure = "*"
 log = "*"
 env_logger = "*"
+clap = "*"
+serde = "*"
+serde_derive = "*"
+toml = "*"
 ring = "*"
 md5 = "*"
-clap = "*"
 openssl = "*"
+
