--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,9 @@
 [package]
-name = "ss-rs"
+name = "async-test"
 version = "0.1.0"
 authors = ["石博文 <sbw@sbw.so>"]
 edition = "2018"
 
 [dependencies]
-futures = "*"
-tokio = "*"
-bytes = "*"
+async-std = "*"
 failure = "*"
-log = "*"
-env_logger = "*"
-clap = "*"
-serde = "*"
-serde_derive = "*"
-toml = "*"
-rand = "*"
-ring = "*"
-md5 = "*"
-openssl = "*"
-
